--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_OPTIONS=--dns-result-order=ipv4first vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
