--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,9 @@ alembic==1.16.5
 blinker==1.9.0
 click==8.2.1
 Flask==3.1.2
+flask-bcrypt==1.0.1
 flask-cors==6.0.1
+flask-jwt-extended==4.6.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
@@ -10,6 +12,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 psycopg2-binary==2.9.10
+python-dotenv==1.0.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
