ci(tests): add additional unit and integration tests with GitHub Actions pipeline

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -4,3 +4,6 @@ testpaths = tests
 
 # Add backend folder to PYTHONPATH so `import app` works
 pythonpath = .
+
+# Default coverage options
+addopts = --cov=app --cov-report=term-missing --cov-report=xml
