--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,8 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+pytest==8.3.3
+pytest-cov==5.0.0
 psycopg2-binary==2.9.10
 python-dotenv==1.0.0
 SQLAlchemy==2.0.43
